prover-ray/zkcdriver/testdata/synced/invalid/const_04.zkc
//error:2:1-17:cyclic definition for LARGE
const LARGE:u8 = 1 * LARGE
